# zero

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/zero/: Cargo.toml
crates/zero-core/: Cargo.toml
crates/zero-core/src/: agent.rs  backend.rs  brand.rs  builtins.rs  clock.rs  compress.rs  config.rs  context.rs  discovery.rs  fleet_config.rs  gate.rs  history.rs  http.rs  json.rs  lib.rs  loop_config.rs  loop_ledger.rs  loop_run.rs  loop_runner.rs  loop_store.rs  mcp.rs  message.rs  openai.rs  orchestrator.rs  recall.rs  router.rs  rules.rs  safety.rs  sched.rs  servers.rs  session.rs  tools.rs  wins.rs
crates/zero-core/tests/: replay_compress.rs
crates/zero-tui/: Cargo.toml
crates/zero-tui/src/: ansi.rs  app.rs  editor.rs  key.rs  lib.rs  markdown.rs  term.rs  viewport.rs
crates/zero-tui/tests/: bash_live.rs  bash_replay.rs  equivalence.rs
crates/zero/src/: main.rs
crates/zero/tests/: cli.rs
docs/: north-stars.md
scripts/: ablate-nudge.sh  ablate-precontext.sh  ablate-recovery.sh  ablate-sysprompt.sh  bench-vs-hermes.sh  coverage.sh  judge.py  rule-decay-eval.py  token-proxy.py
scripts/hooks/: pre-push
