[workspace]
resolver = "2"
members = [
    "crates/zero-core",
    "crates/zero-tui",
    "crates/zero",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/TheTom/zero"
authors = ["Tom <tturney1@gmail.com>"]

# Zero has zero runtime dependencies. This [workspace.dependencies] table is
# intentionally empty and stays that way — the whole point is std-only.

[profile.release]
# Single self-contained binary, no downstream crates → fat LTO is a pure win.
lto = "fat"
codegen-units = 1
# Unwind (not abort): a panic on the streaming thread must NOT kill the whole
# process, and unwinding lets RawTerminal's Drop restore the tty on a crash.
panic = "unwind"
strip = true

[profile.bench]
inherits = "release"
debug = true
