[package]
name = "zero-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero engine core: messages, backends, honest clock, std-only JSON. No dependencies."

[lints.clippy]
all = "deny"

[dependencies]
# none. ever.
