[package]
name = "zero-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero terminal UI: raw-mode terminal, key decoding, line editor, scrollback. No dependencies."

[lints.clippy]
all = "deny"

[dependencies]
zero-core = { path = "../zero-core" }
